# markovify

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
markovify/: __version__.py  chain.py  splitters.py  text.py
