[project]
name = "markovify"
version = "0.10.3"
description = "Markovify is a simple, extensible Markov chain generator. Right now, its primary use is for building Markov models of large corpora of text and generating random sentences from that. However, in theory, it could be used for other applications."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["orjson>=3.11.8", "unidecode>=1.4.0"]
authors = [{ name = "Jeremy Singer-Vine", email = "jsvine@gmail.com" }]
keywords = ["markov", "chain", "text"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "http://github.com/bscout9956/markovify"

[dependency-groups]
dev = [
    "black>=26.3.1",
    "coveralls>=4.1.0",
    "flake8>=7.3.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["markovify"]

[tool.pytest.ini_options]
addopts = "--cov=markovify --cov-report xml:coverage.xml --cov-report term"
